--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </td>
                 </tr>
                 <tr class="ui2">
-                    <td class="bottom-ui2">Viimeisin voitto: <br><span id="lastWinAmount">0</span></td>
+                    <td class="bottom-ui2">Viimeisin voitto: <br><span id="lastWinAmount"></span></td>
                     <td class="bottom-ui2">Kolikot: <br><span id="coins">0</span></td>
                     <td id="playbutton" class="bottom-ui2"><button class="btn-game spinbutton" onclick="spin()">Pelaa</button></td>
                 </tr>
